[package]
name = "envn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="4", features=["derive"]}
bunt="0.2"
inquire={version ="0.6"}
bcrypt="0.15"
indicatif="0.17"
rand="0.8"
aes-gcm="0.10.3"
rusqlite="0.29"
