[package]
name = "envn"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["env", "secret", "password", "manager", "cli"]
readme = "README.md"
authors = ["Ishan Joshi <noobscience@duck.com>"]
description = "The Premium Secrets and .env Manager CLI"
repository = "https://github.com/newtoallofthis123/envn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="4", features=["derive"]}
bunt="0.2"
inquire={version ="0.6"}
bcrypt="0.15"
rand="0.8"
aes-gcm="0.10.3"
rusqlite="0.29"
bincode="1.3.3"
